lab3/grammar.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID error SEMI

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error SEMI

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 27 36 40
    INT (258) 18 61
    FLOAT (259) 62
    ID (260) 14 16 17 20 21 22 56 57 59 60
    SEMI (261) 4 5 22 27 30 32 36 39 40
    COMMA (262) 9 23 42 63
    ASSIGNOP (263) 44 45
    RELOP (264) 48
    PLUS (265) 49
    MINUS (266) 50 54
    STAR (267) 51
    DIV (268) 52
    AND (269) 46
    OR (270) 47
    DOT (271) 59
    NOT (272) 55
    TYPE (273) 10
    LP (274) 20 21 33 34 35 53 56 57
    RP (275) 20 21 33 34 35 53 56 57
    LB (276) 18 58
    RB (277) 18 19 58
    LC (278) 12 26
    RC (279) 12 26
    STRUCT (280) 12 13
    RETURN (281) 32
    IF (282) 33 34
    ELSE (283) 34
    WHILE (284) 35
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList (35)
        on left: 8 9
        on right: 4 9
    Specifier (36)
        on left: 10 11
        on right: 4 5 6 7 25 39 40
    StructSpecifier (37)
        on left: 12 13
        on right: 11
    OptTag (38)
        on left: 14 15
        on right: 12
    Tag (39)
        on left: 16
        on right: 13
    VarDec (40)
        on left: 17 18 19
        on right: 8 9 18 25 43 44
    FunDec (41)
        on left: 20 21 22
        on right: 6
    VarList (42)
        on left: 23 24
        on right: 20 23
    ParamDec (43)
        on left: 25
        on right: 23 24
    CompSt (44)
        on left: 26 27
        on right: 6 7 31
    StmtList (45)
        on left: 28 29
        on right: 26 28
    Stmt (46)
        on left: 30 31 32 33 34 35 36
        on right: 28 33 34 35
    DefList (47)
        on left: 37 38
        on right: 12 26 37
    Def (48)
        on left: 39 40
        on right: 37
    DecList (49)
        on left: 41 42
        on right: 39 42
    Dec (50)
        on left: 43 44
        on right: 41 42
    Exp (51)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 30 32 33 34 35 36 44 45 46 47 48 49 50 51 52 53 54 55 58 59 63 64
    Args (52)
        on left: 63 64
        on right: 56 63


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error . CompSt
   19 VarDec: error . RB

    error  shift, and go to state 20
    RB     shift, and go to state 21
    LC     shift, and go to state 22

    CompSt  go to state 23


State 14

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . error SEMI

    error  shift, and go to state 24
    LP     shift, and go to state 25

    SEMI   reduce using rule 17 (VarDec)
    COMMA  reduce using rule 17 (VarDec)
    LB     reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 20
    LC     shift, and go to state 22

    CompSt  go to state 29


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 31
    Def              go to state 32


State 20

   27 CompSt: error . SEMI

    SEMI  shift, and go to state 33


State 21

   19 VarDec: error RB .

    $default  reduce using rule 19 (VarDec)


State 22

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 34
    Def              go to state 32


State 23

    7 ExtDef: Specifier error CompSt .

    $default  reduce using rule 7 (ExtDef)


State 24

   22 FunDec: ID error . SEMI

    SEMI  shift, and go to state 35


State 25

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 38
    ParamDec         go to state 39


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 17


State 28

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 43


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   39 Def: Specifier . DecList SEMI
   40    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 41

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 32

   37 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 49
    Def              go to state 32


State 33

   27 CompSt: error SEMI .

    $default  reduce using rule 27 (CompSt)


State 34

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 20
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 22
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 35

   22 FunDec: ID error SEMI .

    $default  reduce using rule 22 (FunDec)


State 36

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 37

   25 ParamDec: Specifier . VarDec

    error  shift, and go to state 40
    ID     shift, and go to state 41

    VarDec  go to state 63


State 38

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 64


State 39

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 65

    $default  reduce using rule 24 (VarList)


State 40

   19 VarDec: error . RB

    RB  shift, and go to state 21


State 41

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 42

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 43

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 66


State 44

   19 VarDec: error . RB
   40 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67
    RB    shift, and go to state 21


State 45

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 28

    $default  reduce using rule 43 (Dec)


State 46

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 47

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 41 (DecList)


State 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 49

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 50

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 51

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 52

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 71

    $default  reduce using rule 60 (Exp)


State 53

   54 Exp: MINUS . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 72


State 54

   55 Exp: NOT . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 73


State 55

   53 Exp: LP . Exp RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 74


State 56

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 75


State 57

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 76


State 58

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 77


State 59

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 60

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 61

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 20
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 22
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 79
    Stmt      go to state 61
    Exp       go to state 62


State 62

   30 Stmt: Exp . SEMI
   36     | Exp . error SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    error     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 63

   18 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 25 (ParamDec)


State 64

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 65

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 92
    ParamDec         go to state 39


State 66

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 67

   40 Def: Specifier error SEMI .

    $default  reduce using rule 40 (Def)


State 68

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 93


State 69

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 70

   42 DecList: Dec COMMA . DecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    VarDec   go to state 45
    DecList  go to state 94
    Dec      go to state 47


State 71

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 95

    Exp   go to state 96
    Args  go to state 97


State 72

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 54 (Exp)


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 55 (Exp)


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 98
    LB        shift, and go to state 91


State 75

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 76

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 100


State 77

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 101


State 78

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 79

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 80

   36 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 102


State 81

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 82

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 103


State 83

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 104


State 84

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 105


State 85

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 106


State 86

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 107


State 87

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 108


State 88

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 109


State 89

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 110


State 90

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 111


State 91

   58 Exp: Exp LB . Exp RB

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 112


State 92

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 93

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 44 (Dec)


State 94

   42 DecList: Dec COMMA DecList .
